@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2003/05/19 12:16:51 mjl Exp $
+$NetBSD: distinfo,v 1.6 2004/05/29 01:19:32 xtraeme Exp $
 
-SHA1 (XML-DOM-1.42.tar.gz) = 093b3e02c5475c0d9b5cc7431a075101faa4283e
-Size (XML-DOM-1.42.tar.gz) = 116617 bytes
+SHA1 (XML-DOM-1.43.tar.gz) = 163b78bd66acea7f33a3c58d3710a30ae9bf64a1
+Size (XML-DOM-1.43.tar.gz) = 116710 bytes
